Update the Homepage

--- a/corporate-tax.html
+++ b/corporate-tax.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Corporate Tax Services in UAE</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta name="googlebot" content="noindex">
     <meta content="" name="keywords">
     <meta content=" It is crucial for companies doing business in the UAE to comprehend the consequences of the Corporate Tax and abide by the new rules." name="description">
 
@@ -43,7 +44,7 @@
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status">
         </div>
-        <img class="position-absolute top-50 start-50 translate-middle" src="img/iconssd/icon-1.png" alt="Icon">
+        <img class="position-absolute top-50 start-50 translate-middle" src="img/icon/icon-1.png" alt="Icon">
     </div>
     <!-- Spinner End -->
 
@@ -201,7 +202,7 @@
                             <div class="col-lg-12 ">
                                 <div class="adv-item d-flex flex-column position-relative text-center h-100 ">
                                     <div class=" text-start">
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3">The corporate income tax rates are set up so as to help small and medium-sized firms to claim the UAE Ministry of Finance. </h3>
                                         <span class="text-dark">
                                             <ul class="list-unstyled ">
@@ -216,7 +217,7 @@
                                     <div class="text-dark text-start  fw-bold">To avoid any last-minute complications, it is crucial to understand that firms must plan and prepare for corporate income tax. Because the corporate tax was just implemented in the UAE, businesses must seek the guidance of tax professionals to comprehend how it will affect their operations. In order to comply with tax laws and prevent any legal repercussions, they need also maintain their accounting and tax records.
                                     </div>
                                     <div class="text-start py-4" >
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3 ">Are the Corporate Taxes Applicable in Free Zones? </h3>
                                         <p class="text-dark">Even though they are located in free zones, companies in the UAE must pay corporate tax. Companies in free zones will still be eligible for corporate tax incentives as long as they comply with all legal requirements and only conduct business there. These companies are nevertheless required to abide by all laws, which includes registering with the appropriate agencies and submitting their corporate tax filings. </p>
                                         <p class="text-dark"> It's critical for businesses to comprehend the precise tax requirements that are relevant to them based on their operations and location. If these standards are not met, the business may incur severe penalties and fines as well as other financial damages.
@@ -247,7 +248,7 @@
                             <div class="col-lg-4 col-md-6 mb-lg-0 pb-lg-0 mb-5 pb-5 wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="fact-item text-center bg-light  h-100  pt-0">
                                     <div class="fact-icon border border-2">
-                                        <img src="img/iconssd/icon-2.png" alt="Icon">
+                                        <img src="img/icon/icon-2.png" alt="Icon">
                                     </div>
                                     <h3 class="mb-3">Design Approach</h3>
                                     <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed
@@ -257,7 +258,7 @@
                             <div class="col-lg-4 col-md-6 mb-lg-0 mb-5 pb-5 wow fadeInUp" data-wow-delay="0.3s">
                                 <div class="fact-item text-center bg-light h-100  pt-0">
                                     <div class="fact-icon border border-2">
-                                        <img src="img/iconssd/icon-3.png" alt="Icon">
+                                        <img src="img/icon/icon-3.png" alt="Icon">
                                     </div>
                                     <h3 class="mb-3">Innovative Solutions</h3>
                                     <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed
@@ -267,7 +268,7 @@
                             <div class="col-lg-4 col-md-6 mb-lg-0 mb-5 pb-5 wow fadeInUp" data-wow-delay="0.5s">
                                 <div class="fact-item text-center bg-light h-100  pt-0">
                                     <div class="fact-icon border border-2">
-                                        <img src="img/iconssd/icon-4.png" alt="Icon">
+                                        <img src="img/icon/icon-4.png" alt="Icon">
                                     </div>
                                     <h3 class="mb-3">Project Management</h3>
                                     <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed
@@ -290,7 +291,7 @@
                             <div class="col-lg-12 ">
                                 <div class="adv-item d-flex flex-column position-relative text-center h-100 ">
                                     <div class=" text-start">
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3">What is the process to Register for Corporate Taxes?</h3>
                                         <span class="text-dark">
                                             <ul class="list-unstyled ">
@@ -309,7 +310,7 @@
                                     <div class="text-dark text-start points_style fw-bold">It is advisable for businesses to start getting ready for the registration procedure by making sure they have all the required paperwork and information. This comprises records of the company's business license and registration, financial accounts, and other pertinent data regarding its operations in the United Arab Emirates.
                                     </div>
                                     <div class="text-start py-4" >
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3 ">When to file and pay Corporate Tax in Dubai?</h3>
                                         <p class="text-dark">Understanding the deadlines for submitting and paying corporation tax is crucial for ensuring compliance with the UAE's corporate tax legislation. Finding the end of your company's fiscal year is the first step in this approach. You will then have nine months from the end of the fiscal year to file your corporate tax return and make any required payments.
                                         </p>
@@ -343,7 +344,7 @@
                             <div class="col-lg-12 col-md-6">
                                 <div class="adv-item d-flex flex-column position-relative text-center h-100 ">
                                     <div class=" text-start">
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3">The following documents are required to be submitted in order to register for corporate tax services in the UAE:</h3>
                                         <span class="text-dark">
                                             <ul class="list-unstyled">
@@ -378,7 +379,7 @@
                             <div class="col-lg-12 col-md-6">
                                 <div class="points_style d-flex position-relative text-center h-100">
                                     <div class="service-text  text-start">
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3">Reducing Corporate Concentration </h3>
                                         <span class="text-dark">
                                             <p class="mb-4">Corporate concentration, which is one of the key causes of the slowdown in productivity growth and the general economy, will reduce as a result of the implementation of the UAE's corporate tax policy. The largest corporations currently have unequal distributions of net income, revenues, assets, and market capitalization, which is increasing concentration. Due to this concentration, large corporations raise prices, cut wages, provide lower-quality goods and services, and limit output.</p>
@@ -391,7 +392,7 @@
                             <div class="col-lg-12 col-md-6">
                                 <div class="points_style d-flex position-relative text-center h-100">
                                     <div class="service-text  text-start">
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3">Promotion of a healthy Competition</h3>
                                         <span class="text-dark">
                                             <p class="mb-4">Due to the elimination of any potential tax benefits that multinational corporations could possibly have previously over smaller enterprises, the policy ensures fair competition between small businesses and multinational corporations in the UAE.
@@ -404,7 +405,7 @@
                             <div class="col-lg-12 col-md-6">
                                 <div class="points_style d-flex position-relative text-center h-100">
                                     <div class="service-text  text-start">
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3">Promotes accountability and transparency in financial reporting</h3>
                                         <span class="text-dark">
                                             <p class="mb-4">The corporate tax policy encourages accountability and openness in financial reporting. This can assist small firms in gaining the confidence of investors, clients, and suppliers.</p>
@@ -417,7 +418,7 @@
                                 <div class="points_style d-flex position-relative text-center h-100">
                                     <!-- <img class="bg-img" src="img/service-2.jpg" alt=""> -->
                                     <div class="service-text text-start">
-                                        <!-- <img class="mb-4" src="img/iconssd/icon-6.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4" src="img/icon/icon-6.png" alt="Icon"> -->
                                         <h3 class="mb-3">Preventing Tax Invasion</h3>
                                         <p class="mb-4">Corporate entities frequently receive praise for their part in escalating competition and improving customer welfare by utilizing economies of scale. It is generally acknowledged that larger firms are more efficient than smaller businesses. Indian businessmen who want to start up operations in Dubai are only obligated to pay taxes if their net earnings exceed INR 75.96 Lakh. This new tax structure is anticipated to give smaller enterprises a competitive edge while also addressing the problem of corporate tax dodging.
                                         </p>
@@ -429,7 +430,7 @@
                                 <div class="points_style d-flex position-relative text-center h-100">
                                     <!-- <img class="bg-img" src="img/service-3.jpg" alt=""> -->
                                     <div class="service-text text-start">
-                                        <!-- <img class="mb-4" src="img/iconssd/icon-7.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4" src="img/icon/icon-7.png" alt="Icon"> -->
                                         <h3 class="mb-3">Increased government revenue</h3>
                                         <p class="mb-4">With the new policy in place, the government will have access to more money, which it can use to support small businesses through a variety of programs like grants, subsidies, and training courses
                                         </p>
@@ -442,21 +443,7 @@
                     </div>
                 </div>
                 <!-- benefit End -->
-                <!-- Conclusion Start -->
-                <div class="container-xxl nav-item py-3 bg-white" id="Conclusion">
-                    <div class="container">
-                        <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-                            <h4 class=" display-3">Conclusion</h4>
-                            <!-- <h1 class="display-6 mb-4 text-primary">We Focused on Provide Best benefit To Client</h1> -->
-                        </div>
-                        <div class="row g-4">
-                            <p class="text-dark">The UAE is prepared to build a robust economic recovery and get back to pre-pandemic levels with the new business tax regime in place. This offers business owners in the UAE a good opportunity to launch their ventures. Consult the professionals at Whiteworth if you're not sure whether Dubai is the best place for your business. With branches in major cities across the world, we are a leading provider of business formation services and are well-equipped to point you in the correct direction. We provide end-to-end support, from helping you develop your business idea to establishing a prosperous company. Establish your company in Dubai right now and take advantage of the UAE's state-of-the-art infrastructure, strategic location, strong connectivity, and qualified workforce.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Conculsion End -->
+                
 
                 <!-- FAQ Start -->
                 <!-- <div class="section-title nav-item text-center position-relative pb-3 mb-5 mx-auto faq" id="faq"
