--- a/vat-registeration.html
+++ b/vat-registeration.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
 
     <title>VAT Registration Services in Dubai</title>
+    <meta name="googlebot" content="noindex">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="Businesses may assure compliance with the VAT rules and maintain success in the expanding economy of the UAE with our professional guidance." name="description">
@@ -41,7 +42,7 @@
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
-        <img class="position-absolute top-50 start-50 translate-middle" src="img/iconssd/icon-2.png" alt="Icon">
+        <img class="position-absolute top-50 start-50 translate-middle" src="img/icon/icon-2.png" alt="Icon">
     </div>
     <!-- Spinner End -->
 
@@ -185,7 +186,7 @@
                             <div class="col-lg-4 col-md-6 mb-lg-0 pb-lg-0 mb-5 pb-5 wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="fact-item text-center bg-light  h-100  pt-0">
                                     <div class="fact-icon border border-2">
-                                        <img src="img/iconssd/icon-2.png" alt="Icon">
+                                        <img src="img/icon/icon-2.png" alt="Icon">
                                     </div>
                                     <h3 class="mb-3">Design Approach</h3>
                                     <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
@@ -194,7 +195,7 @@
                             <div class="col-lg-4 col-md-6 mb-lg-0 mb-5 pb-5 wow fadeInUp" data-wow-delay="0.3s">
                                 <div class="fact-item text-center bg-light h-100  pt-0">
                                     <div class="fact-icon border border-2">
-                                        <img src="img/iconssd/icon-3.png" alt="Icon">
+                                        <img src="img/icon/icon-3.png" alt="Icon">
                                     </div>
                                     <h3 class="mb-3">Innovative Solutions</h3>
                                     <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
@@ -203,7 +204,7 @@
                             <div class="col-lg-4 col-md-6 mb-lg-0 mb-5 pb-5 wow fadeInUp" data-wow-delay="0.5s">
                                 <div class="fact-item text-center bg-light h-100  pt-0">
                                     <div class="fact-icon border border-2">
-                                        <img src="img/iconssd/icon-4.png" alt="Icon">
+                                        <img src="img/icon/icon-4.png" alt="Icon">
                                     </div>
                                     <h3 class="mb-3">Project Management</h3>
                                     <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
@@ -225,7 +226,7 @@
                                 <div class="service-item position-relative d-flex flex-lg-row flex-column h-100">
                                     <div class=" col-lg-6 col-md-12  d-md-block d-none"><img class="w-100 h-100" src="img/Step.jpg" alt=""></div>
                                     <div class="col-lg-6 col-md-12 col-12 text-start p-4  service-text">
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3">Step 1: Make sure you're eligible  </h3>
                                         <p class="mb-4 ">You must ascertain whether your company qualifies for registration before submitting an application for VAT registration. As previously stated, companies must register for VAT if their taxable supplies and imports total more than AED 375,000 annually. Additionally, you should determine whether your company qualifies for any of the exempt categories or zero-rated supplies.
                                         </p>
@@ -236,7 +237,7 @@
                             <div class="col-md-12">
                                 <div class="service-item position-relative d-flex flex-lg-row flex-column-reverse h-100">
                                     <div class="col-lg-6 col-md-12 col-12 text-start p-4  service-text">
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3">Step 2: Gather the necessary paperwork</h3>
                                         <p class="mb-4">The following step is to gather all the paperwork needed for VAT registration. These consist of:
                                         </p>
@@ -257,7 +258,7 @@
                                 <div class="service-item position-relative d-flex flex-lg-row flex-column h-100">
                                     <div class=" col-lg-6 col-md-12 d-md-block d-none"><img class="w-100 h-100" src="img/step3.jpg" alt=""></div>
                                     <div class="col-lg-6 col-md-12 col-12 text-start p-4  service-text">
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3">Step 3: Submit the form</h3>
                                         <p class="mb-4">Through the website of the Federal Tax Authority (FTA), you can electronically submit your application for VAT registration. You will need to register for an account, fill out all the requested information about your company, and upload all essential paperwork. A qualified tax agent who can help you with the registration process is an alternative</p>
                                         <!-- <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a> -->
@@ -268,7 +269,7 @@
                             <div class="col-md-12">
                                 <div class="service-item position-relative d-flex flex-lg-row flex-column-reverse h-100">
                                     <div class=" col-lg-6 col-md-12  col-12  text-start p-4  service-text">
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3">Step 4: Wait for Approval</h3>
                                         <p class="mb-4">The FTA will send you a confirmation email after your application has been submitted. The FTA will assess your application and, if necessary, may ask for more supporting documentation. Your VAT registration certificate will be sent to you after your application has been approved.</p>
                                         <!-- <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a> -->
@@ -280,7 +281,7 @@
                                 <div class="service-item position-relative d-flex flex-lg-row flex-column h-100">
                                     <div class=" col-lg-6 col-md-12 d-md-block d-none"><img class="w-100 h-100" src="img/about.jpg" alt=""></div>
                                     <div class=" col-lg-6 col-md-12  col-12 text-start p-4  service-text">
-                                        <!-- <img class="mb-4 " src="img/iconssd/icon-5.png" alt="Icon"> -->
+                                        <!-- <img class="mb-4 " src="img/icon/icon-5.png" alt="Icon"> -->
                                         <h3 class="mb-3">Step 5: Begin collecting VAT </h3>
                                         <p class="mb-4">After receiving your certificate of VAT registration, you can begin adding VAT to taxable imports and supplies. Additionally, you must regularly file your VAT returns in accordance with the FTA's instructions. <br>
                                             Every business in Dubai is required to follow the VAT registration process. You can guarantee a simple and hassle-free VAT registration process for your company by following these steps. Make sure to stay updated on the most recent VAT regulations and, if necessary, seek professional help.
